Updated CustFrontScreen form design; fixed resource linking in CustServCounter

--- a/CustServCounter/CustServCounter.csproj
+++ b/CustServCounter/CustServCounter.csproj
@@ -61,11 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="res\recall.png">
-      <Link>recall.png</Link>
-    </None>
+    <Resource Include="res\recall.png">
+    </Resource>
     <Resource Include="res\call.png">
-      <Link>call.png</Link>
     </Resource>
   </ItemGroup>
   <ItemGroup>
