Updated the icon with a lighter colour.

--- a/CustServCounter/CustServCounter.csproj
+++ b/CustServCounter/CustServCounter.csproj
@@ -42,7 +42,7 @@
     </StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Logomakr_25crJN.ico</ApplicationIcon>
+    <ApplicationIcon>qbe_logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp">
@@ -96,7 +96,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Logomakr_25crJN.ico" />
+    <Content Include="qbe_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
