--- a/CustFrontScreen/CustReceptionArea.csproj
+++ b/CustFrontScreen/CustReceptionArea.csproj
@@ -47,7 +47,7 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Logomakr_25crJN.ico</ApplicationIcon>
+    <ApplicationIcon>qbe_logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp">
@@ -106,7 +106,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Logomakr_25crJN.ico" />
+    <Content Include="qbe_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
