--- a/TVScreenDisplay/TVScreenDisplay.csproj
+++ b/TVScreenDisplay/TVScreenDisplay.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Logomakr_25crJN.ico</ApplicationIcon>
+    <ApplicationIcon>qbe_logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -83,7 +83,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Logomakr_25crJN.ico" />
+    <Content Include="qbe_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
